improved some stuff

--- a/resume.html
+++ b/resume.html
@@ -82,8 +82,8 @@
                     <div class="container d-flex flex-column align-items-center">
 
                         <div class="w-60 pb-5 text-center text-sm-start">
-                            <h2 class="fs-2 text-white fw-light mb-4 hidden">Profile</h2>
-                            <h3 class="fs-4 text-white fw-normal mb-4 line-he hidden">I'm a Frontend Developer from
+                            <h2 class="fs-2 text-white fw-light mb-3 fw-bold hidden">Profile</h2>
+                            <h3 class="fs-4 text-white fw-normal mb-3 line-he hidden">I'm a Frontend Developer from
                                 Rahim Yar
                                 Khan,
                                 Pakistan. I aim
@@ -97,20 +97,20 @@
 
                             <div>
                                 <div>
-                                    <h3 class="fs-5 text-white mb-4 hidden">Name: <span class="text-muted-3">Arbab
+                                    <h3 class="fs-5 text-white mb-2 hidden">Name: <span class="text-muted-3">Arbab
                                             Bashir</span>
                                     </h3>
-                                    <h3 class="fs-5 text-white mb-4 hidden">Address: <span class="text-muted-3">Abdal
+                                    <h3 class="fs-5 text-white mb-2 hidden">Address: <span class="text-muted-3">Abdal
                                             building
                                             material,
                                             Ameen
                                             Garh Road, Rahim Yar Khan, Pakistan</span>
                                     </h3>
-                                    <h3 class="fs-5 text-white mb-4 hidden">Phone: <span
+                                    <h3 class="fs-5 text-white mb-2 hidden">Phone: <span
                                             class="text-muted-3">+92-319-5147479</span>
                                     </h3>
-                                    <h3 class="fs-5 text-white mb-4 hidden">Email: <span
-                                            class="text-muted-3">arbabbashir30@gmail.com</span>
+                                    <h3 class="fs-5 text-white mb-2 hidden">Email: <span class="text-muted-3"><a
+                                                href="mailto:arbabbashir30@gmail.com">arbabbashir30@gmail.com</a></span>
                                     </h3>
                                 </div>
                             </div>
@@ -158,15 +158,22 @@
                                 </div>
                             </div>
 
-                            <div class="d-flex justify-content-between bord pb-4 hidden">
+                            <div class="d-flex justify-content-between bord py-4">
                                 <div>
-                                    <h3 class="fs-5 text-white mb-3">Front End Developer <span
-                                            class="text-muted-3 fw-light">-
-                                            Hello World!</span>
-                                        <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
+                                    <h3 class="fs-5 text-white mb-3">Personal Projects</h3>
+                                    <h4 class="text-muted-3 fs-5">Self-Initiated</h4>
+                                    <p class="text-muted-3 fs-5 fw-light">Designed and implemented a variety of personal
+                                        web projects, such as forms, portfolio sites, landing pages, and fully
+                                        functional web applications.</p>
+                                    <ul class="text-muted-3 fs-6">
+                                        <li>Built with HTML, CSS, JavaScript</li>
+                                        <li>Used Bootstrap for responsive design</li>
+                                        <li>Deployed on GitHub Pages</li>
+                                        <li><a href="portfolio.html">View Projects</a></li>
+                                    </ul>
                                 </div>
                                 <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2017 - 2020</p>
+                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">Jan. 2024 - Present</p>
                                 </div>
                             </div>
 
@@ -176,52 +183,123 @@
                         <div class="w-60 py-5">
                             <h2 class="fs-2 text-white fw-light mb-5 hidden">Education</h2>
 
-                            <div class="d-flex justify-content-between bord pb-4 hidden">
-                                <div>
-                                    <h3 class="fs-5 text-white mb-3 ">Master Degree in Computer Science <span
-                                            class="text-muted-3 fw-light">-
-                                            KFUEIT</span>
-                                        <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
-                                </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2022 - Present</p>
-                                </div>
-                            </div>
 
-                            <div class="d-flex justify-content-between bord py-4 hidden">
+
+                            <div class="  bord py-4 hidden">
+
                                 <div>
-                                    <h3 class="fs-5 text-white mb-3">Web Development <span
+                                    <h3 class="fs-4 text-white mb-2">Full Stack Web Development <span
                                             class="text-muted-3 fw-light">-
                                             ICR IT</span>
                                         <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap">April-2024 -
+                                            Sept.-2024</p>
+                                        <h4 class="text-muted-3 fs-5"><span class="text-white ">
+                                                Skills Acquired:</span>
+                                            <ul class="fs-6">
+                                                <li>HTML & CSS</li>
+                                                <li>Bootstrap & Tailwind</li>
+                                                <li>JavaScript(ES6+)</li>
+                                                <li>React.js</li>
+                                                <li>Node.js</li>
+                                                <li>Responsive Design</li>
+                                                <li>Version Control(Git, GitHub)</li>
+
+                                            </ul>
+                                        </h4>
+
                                 </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2014 - 2015</p>
+
+
+                            </div>
+
+
+                            <div class="d-flex justify-content-between bord py-4 hidden">
+                                <div>
+                                    <h3 class="fs-4 text-white mb-2">JavaScript Algorithims & Data Structures <span
+                                            class="text-muted-3 fw-light">-
+                                            FreeCodeCamp</span>
+                                        <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap">Jan.-2024 - May-2024</p>
+                                        <h4 class="text-muted-3 fs-5"><span class="text-white">
+                                                Skills Acquired:</span>
+                                            <ul class="fs-6">
+                                                <li>Data Structures</li>
+                                                <li>Problem-Solving</li>
+                                                <li>Debugging</li>
+                                                <li>Algorithimic Thinking</li>
+                                                <li>Technical Documentation</li>
+                                                <li>DOM Manipulation</li>
+
+
+                                            </ul>
+                                        </h4>
                                 </div>
+
+
                             </div>
 
                             <div class="d-flex justify-content-between bord py-4 hidden">
                                 <div>
-                                    <h3 class="fs-5 text-white mb-3 ">Bacheclor of Science in Computer Science <span
+                                    <h3 class="fs-4 text-white mb-2">Responsive Web Design <span
                                             class="text-muted-3 fw-light">-
-                                            NUST</span>
-                                        <h4 class="text-muted-3 fs-5">Lahore, Pakistan</h4>
+                                            FreeCodeCamp</span>
+                                        <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap">Jan.-2024 - May-2024</p>
+                                        <h4 class="text-muted-3 fs-5"><span class="text-white">
+                                                Skills Acquired:</span>
+                                            <ul class="fs-6">
+                                                <li>Semantic HTML</li>
+                                                <li>Responsive Design</li>
+                                                <li>Animations</li>
+                                                <li>Color Theory</li>
+                                                <li>Accessible Forms</li>
+                                                <li>Code Organization</li>
+
+
+                                            </ul>
+                                        </h4>
                                 </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2010 - 2014</p>
-                                </div>
+
+
                             </div>
 
                             <div class="d-flex justify-content-between bord py-4 hidden">
                                 <div>
-                                    <h3 class="fs-5 text-white mb-3">Diploma in Information Technology <span
+                                    <h3 class="fs-4 text-white mb-2 ">Doctor of Medicine(MD) (Incomplete)<span
                                             class="text-muted-3 fw-light">-
-                                            KFUEIT</span>
+                                            Avicena Medical University</span>
+                                        <h4 class="text-muted-3 fs-5">Dushanbe, Tajikistan</h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap">2021 - 2024</p>
+                                        <h4 class="text-muted-3 fs-5"><span class="text-white">Transferable
+                                                Skills:</span>
+                                            <ul class="fs-6">
+                                                <li>Critical Thinking</li>
+                                                <li>Problem Solving</li>
+                                                <li>Data Analysis</li>
+                                                <li>Dicipline</li>
+
+                                            </ul>
+                                        </h4>
+                                </div>
+
+                            </div>
+
+                            <div class="d-flex justify-content-between bord py-4 hidden">
+                                <div>
+                                    <h3 class="fs-4 text-white mb-2">FSC Pre-Med<span class="text-muted-3 fw-light">-
+                                            Superior Collage</span>
                                         <h4 class="text-muted-3 fs-5">Rahim Yar khan, Pakistan</h4>
+                                        <p class="text-muted-3 fs-5 fw-light nowrap">2019 - 2021</p>
+                                        <h4 class="text-muted-3 fs-5"><span class="text-white">Skills Acquired:</span>
+                                            <ul class="fs-6">
+                                                <li>Time Management</li>
+                                                <li>Team Collaboration</li>
+                                                <li>Communication</li>
+                                            </ul>
+                                        </h4>
                                 </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2010 - 2012</p>
-                                </div>
+
                             </div>
 
 
