fixed script and some minor resume changes

--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
 
 
                 <section class="section-resume py-5">
-                    <div class="container d-flex flex-column align-items-center">
+                    <div class="container px-0 d-flex flex-column align-items-center">
 
                         <div class="w-60 pb-5 text-center text-sm-start">
                             <h2 class="fs-2 text-white fw-light mb-3 fw-bold hidden">Profile</h2>
@@ -120,51 +120,16 @@
                         <div class="w-60 py-5">
                             <h2 class="fs-2 text-white fw-light mb-5 hidden">Experience</h2>
 
-                            <div class="d-flex justify-content-between bord py-4 hidden">
-                                <div>
-                                    <h3 class="fs-5 text-white mb-3">Full Stack Developer <span
-                                            class="text-muted-3 fw-light">-
-                                            FreeLance</span>
-                                        <h4 class="text-muted-3 fs-5">Rahim Yar khan, Pakistan</h4>
-                                </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2023 - Present</p>
-                                </div>
-                            </div>
 
 
-
-                            <div class="d-flex justify-content-between bord py-4 hidden">
-                                <div>
-                                    <h3 class="fs-5 text-white mb-3">Front End Developer <span
-                                            class="text-muted-3 fw-light">-
-                                            GrayMatter technologies</span>
-                                        <h4 class="text-muted-3 fs-5">Lahore, Pakistan</h4>
-                                </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2021 - 2023</p>
-                                </div>
-                            </div>
-
-                            <div class="d-flex justify-content-between bord py-4 hidden">
-                                <div>
-                                    <h3 class="fs-5 text-white mb-3">Full Stack Developer <span
-                                            class="text-muted-3 fw-light">-
-                                            ICR IT</span>
-                                        <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
-                                </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">2020 - 2021</p>
-                                </div>
-                            </div>
-
-                            <div class="d-flex justify-content-between bord py-4">
+                            <div class="d-flex bord py-4">
                                 <div>
                                     <h3 class="fs-5 text-white mb-3">Personal Projects</h3>
                                     <h4 class="text-muted-3 fs-5">Self-Initiated</h4>
                                     <p class="text-muted-3 fs-5 fw-light">Designed and implemented a variety of personal
                                         web projects, such as forms, portfolio sites, landing pages, and fully
                                         functional web applications.</p>
+                                    <p class="text-muted-3 fs-5 fw-light  nowrap">Jan. 2024 - Present</p>
                                     <ul class="text-muted-3 fs-6">
                                         <li>Built with HTML, CSS, JavaScript</li>
                                         <li>Used Bootstrap for responsive design</li>
@@ -172,31 +137,31 @@
                                         <li><a href="portfolio.html">View Projects</a></li>
                                     </ul>
                                 </div>
-                                <div class="date">
-                                    <p class="text-muted-3 fs-5 fw-light text-end nowrap">Jan. 2024 - Present</p>
-                                </div>
+
                             </div>
 
                         </div>
 
 
-                        <div class="w-60 py-5">
+                        <div class="w-60 py-5 ">
                             <h2 class="fs-2 text-white fw-light mb-5 hidden">Education</h2>
 
 
 
-                            <div class="  bord py-4 hidden">
+                            <div class="bord py-4 hidden">
 
-                                <div>
-                                    <h3 class="fs-4 text-white mb-2">Full Stack Web Development <span
-                                            class="text-muted-3 fw-light">-
+                                <div class="">
+                                    <h3 class="fs-4 text-white mb-2 ">Full Stack Web
+                                        Development <span class="text-muted-3 fw-light">-
                                             ICR IT</span>
-                                        <h4 class="text-muted-3 fs-5">Rahim Yar Khan, Pakistan</h4>
-                                        <p class="text-muted-3 fs-5 fw-light  nowrap">April-2024 -
+                                        <h4 class="text-muted-3 fs-5 ">Rahim Yar Khan, Pakistan
+                                        </h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap ">
+                                            April-2024 -
                                             Sept.-2024</p>
-                                        <h4 class="text-muted-3 fs-5"><span class="text-white ">
+                                        <h4 class="text-muted-3 fs-5"><span class="text-white">
                                                 Skills Acquired:</span>
-                                            <ul class="fs-6">
+                                            <ul class="fs-6 d-flex flex-column">
                                                 <li>HTML & CSS</li>
                                                 <li>Bootstrap & Tailwind</li>
                                                 <li>JavaScript(ES6+)</li>
@@ -214,7 +179,7 @@
                             </div>
 
 
-                            <div class="d-flex justify-content-between bord py-4 hidden">
+                            <div class="d-flex bord py-4 hidden">
                                 <div>
                                     <h3 class="fs-4 text-white mb-2">JavaScript Algorithims & Data Structures <span
                                             class="text-muted-3 fw-light">-
@@ -223,7 +188,7 @@
                                         <p class="text-muted-3 fs-5 fw-light  nowrap">Jan.-2024 - May-2024</p>
                                         <h4 class="text-muted-3 fs-5"><span class="text-white">
                                                 Skills Acquired:</span>
-                                            <ul class="fs-6">
+                                            <ul class="fs-6 d-flex flex-column">
                                                 <li>Data Structures</li>
                                                 <li>Problem-Solving</li>
                                                 <li>Debugging</li>
@@ -239,7 +204,7 @@
 
                             </div>
 
-                            <div class="d-flex justify-content-between bord py-4 hidden">
+                            <div class="d-flex bord py-4 hidden">
                                 <div>
                                     <h3 class="fs-4 text-white mb-2">Responsive Web Design <span
                                             class="text-muted-3 fw-light">-
@@ -248,7 +213,7 @@
                                         <p class="text-muted-3 fs-5 fw-light  nowrap">Jan.-2024 - May-2024</p>
                                         <h4 class="text-muted-3 fs-5"><span class="text-white">
                                                 Skills Acquired:</span>
-                                            <ul class="fs-6">
+                                            <ul class="fs-6 d-flex flex-column">
                                                 <li>Semantic HTML</li>
                                                 <li>Responsive Design</li>
                                                 <li>Animations</li>
@@ -264,16 +229,18 @@
 
                             </div>
 
-                            <div class="d-flex justify-content-between bord py-4 hidden">
+                            <div class="d-flex  bord py-4 hidden">
                                 <div>
-                                    <h3 class="fs-4 text-white mb-2 ">Doctor of Medicine(MD) (Incomplete)<span
-                                            class="text-muted-3 fw-light">-
+                                    <h3 class="fs-4 text-white mb-2 ">Doctor of Medicine(MD)
+                                        (Incomplete)<span class="text-muted-3 fw-light">-
                                             Avicena Medical University</span>
-                                        <h4 class="text-muted-3 fs-5">Dushanbe, Tajikistan</h4>
-                                        <p class="text-muted-3 fs-5 fw-light  nowrap">2021 - 2024</p>
+                                        <h4 class="text-muted-3 fs-5 ">Dushanbe, Tajikistan
+                                        </h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap">2021 -
+                                            2024</p>
                                         <h4 class="text-muted-3 fs-5"><span class="text-white">Transferable
                                                 Skills:</span>
-                                            <ul class="fs-6">
+                                            <ul class="fs-6 d-flex flex-column">
                                                 <li>Critical Thinking</li>
                                                 <li>Problem Solving</li>
                                                 <li>Data Analysis</li>
@@ -285,14 +252,16 @@
 
                             </div>
 
-                            <div class="d-flex justify-content-between bord py-4 hidden">
+                            <div class="d-flex  bord py-4 hidden">
                                 <div>
-                                    <h3 class="fs-4 text-white mb-2">FSC Pre-Med<span class="text-muted-3 fw-light">-
+                                    <h3 class="fs-4 text-white mb-2 ">FSC Pre-Med<span class="text-muted-3 fw-light">-
                                             Superior Collage</span>
-                                        <h4 class="text-muted-3 fs-5">Rahim Yar khan, Pakistan</h4>
-                                        <p class="text-muted-3 fs-5 fw-light nowrap">2019 - 2021</p>
+                                        <h4 class="text-muted-3 fs-5">Rahim Yar khan, Pakistan
+                                        </h4>
+                                        <p class="text-muted-3 fs-5 fw-light nowrap ">2019 -
+                                            2021</p>
                                         <h4 class="text-muted-3 fs-5"><span class="text-white">Skills Acquired:</span>
-                                            <ul class="fs-6">
+                                            <ul class="fs-6 d-flex flex-column">
                                                 <li>Time Management</li>
                                                 <li>Team Collaboration</li>
                                                 <li>Communication</li>
@@ -310,7 +279,7 @@
                         <div class="w-60 py-5">
                             <h2 class="fs-2 text-white fw-light mb-5">My skills</h2>
 
-                            <div class="py-3 hidden">
+                            <div class="py-3 hidden hidden32">
                                 <h3 class="fs-4 text-white mb-3">CSS3</h3>
 
 
