--- a/index.html
+++ b/index.html
@@ -172,31 +172,31 @@
 
                         <div class="col-lg-3 col-md-4 text-center hidden">
                             <a href=""><i class="fa-brands fa-uikit display-4 mb-6"></i></a>
-                            <h3 class="text-white fs-4 mb-2">UI/UX Design
+                            <h3 class="text-white fs-4 mb-2">Front End Development
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Mobile App Design
+                            <h3 class="text-white fs-4 mb-2">React.js Development
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Responsive Design</h3>
+                            <h3 class="text-white fs-4 mb-2">Animations</h3>
                         </div>
 
                         <div class="col-lg-3 col-md-4 text-center hidden">
                             <a href=""><i class="fa-solid fa-gears display-4 mb-6"></i></a>
-                            <h3 class="text-white fs-4 mb-2">Product Strategy
+                            <h3 class="text-white fs-4 mb-2">Responsive Web Design
 
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Design Sprints
+                            <h3 class="text-white fs-4 mb-2">User Friendly UI
 
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">UX Strategy
+                            <h3 class="text-white fs-4 mb-2">Mobile-First Approach
                             </h3>
                         </div>
 
                         <div class="col-lg-3 col-md-4 text-center hidden">
                             <a href=""><i class="fa-solid fa-code display-4 mb-6"></i></a>
-                            <h3 class="text-white fs-4 mb-2">HTML/CSS
+                            <h3 class="text-white fs-4 mb-2">Back End Development
 
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Prototyping
+                            <h3 class="text-white fs-4 mb-2">Node.js Servers
 
                             </h3>
                             <h3 class="text-white fs-4 mb-2">User Testing
@@ -218,8 +218,8 @@
                 <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
                     <div id="imgSlide03" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide03"><a
-                            href="https://arbab57.github.io/portfolio/" target="_blank"><img class="project-img"
-                                src="assets/projects/project-portfolio-1.png" alt=""></a>
+                            href="https://arbab57.github.io/portfolio/" target="_blank"><img loading="lazy"
+                                class="project-img" src="assets/projects/project-portfolio-1.png" alt=""></a>
                     </div>
 
                     <div
@@ -247,8 +247,8 @@
 
                 <div class="row justify-content-center flex-row-reverse gap-lg-4 p-lg-5 text-sm-start">
                     <div id="imgSlide02" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide "><a
-                            href="https://arbab57.github.io/onlineCourses/" target="_blank"><img class="project-img"
-                                src="assets/projects/project- courses.png" alt=""></a>
+                            href="https://arbab57.github.io/onlineCourses/" target="_blank"><img loading="lazy"
+                                class="project-img" src="assets/projects/project- courses.png" alt=""></a>
                     </div>
 
                     <div
@@ -273,7 +273,8 @@
 
                     <div id="imgSlide01" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide01"><a
                             href="https://arbab57.github.io/architecturesite/index.html" target="_blank"><img
-                                class="project-img" src="assets/projects/project-architecture.png" alt=""></a>
+                                loading="lazy" class="project-img" src="assets/projects/project-architecture.png"
+                                alt=""></a>
                     </div>
 
                     <div
@@ -301,8 +302,8 @@
 
                 <div class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
                     <div id="imgSlide04" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide04"><a
-                            href="https://arbab57.github.io/bookstore/" target="_blank"><img class="project-img"
-                                src="assets/projects/project-ourtracks.png" alt=""></a>
+                            href="https://arbab57.github.io/bookstore/" target="_blank"><img loading="lazy"
+                                class="project-img" src="assets/projects/project-ourtracks.png" alt=""></a>
                     </div>
 
                     <div
@@ -329,8 +330,8 @@
                 <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
                     <div id="imgSlide05" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide05"><a
-                            href="https://arbab57.github.io/travel/" target="_blank"><img class="project-img"
-                                src="assets/projects/697-890.png" alt=""></a></div>
+                            href="https://arbab57.github.io/travel/" target="_blank"><img loading="lazy"
+                                class="project-img" src="assets/projects/697-890.png" alt=""></a></div>
 
                     <div
                         class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
@@ -351,8 +352,8 @@
 
                 <div class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
                     <div id="imgSlide06" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide06"><a
-                            href="https://arbab57.github.io/portfolio2/" target="_blank"><img class="project-img"
-                                src="assets/projects/portfolio-practice.png" alt=""></a>
+                            href="https://arbab57.github.io/portfolio2/" target="_blank"><img loading="lazy"
+                                class="project-img" src="assets/projects/portfolio-practice.png" alt=""></a>
                     </div>
 
                     <div
@@ -426,7 +427,9 @@
 
 
     <footer class="py-5 hidden position-relative">
-        <span class="up-arrow"><a href="#header"><i class="fa-solid fa-caret-up text-white fs-1"></i></a></span>
+        <a href="#header">
+            <span class="up-arrow"><i class="fa-solid fa-caret-up text-white fs-1"></i></span>
+        </a>
 
         <div class="container d-flex flex-column align-items-center py-5">
             <div class="d-flex fs-4 gap-3 mt-4 mb-5 pb-3">
