--- a/service.html
+++ b/service.html
@@ -87,31 +87,31 @@
 
                         <div class="col-lg-3 col-md-4 text-center hidden">
                             <a href=""><i class="fa-brands fa-uikit display-4 mb-6"></i></a>
-                            <h3 class="text-white fs-4 mb-2">UI/UX Design
+                            <h3 class="text-white fs-4 mb-2">Front End Development
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Mobile App Design
+                            <h3 class="text-white fs-4 mb-2">React.js Development
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Responsive Design</h3>
+                            <h3 class="text-white fs-4 mb-2">Animations</h3>
                         </div>
 
                         <div class="col-lg-3 col-md-4 text-center hidden">
                             <a href=""><i class="fa-solid fa-gears display-4 mb-6"></i></a>
-                            <h3 class="text-white fs-4 mb-2">Product Strategy
+                            <h3 class="text-white fs-4 mb-2">Responsive Web Design
 
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Design Sprints
+                            <h3 class="text-white fs-4 mb-2">User Friendly UI
 
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">UX Strategy
+                            <h3 class="text-white fs-4 mb-2">Mobile-First Approach
                             </h3>
                         </div>
 
                         <div class="col-lg-3 col-md-4 text-center hidden">
                             <a href=""><i class="fa-solid fa-code display-4 mb-6"></i></a>
-                            <h3 class="text-white fs-4 mb-2">HTML/CSS
+                            <h3 class="text-white fs-4 mb-2">Back End Development
 
                             </h3>
-                            <h3 class="text-white fs-4 mb-2">Prototyping
+                            <h3 class="text-white fs-4 mb-2">Node.js Servers
 
                             </h3>
                             <h3 class="text-white fs-4 mb-2">User Testing
