--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,9 @@
                 <div id="con-p1" class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
                     <div id="imgSlide01" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide03"><a
-                            class="link-p1" href="https://arbab57.github.io/portfolio/" target="_blank"><img id="img-p1"
-                                class="project-img" src="assets/projects/project-portfolio-1.png" alt=""></a>
+                            class="link-p1" href="https://arbab57.github.io/portfolio/" target="_blank"><img
+                                loading="lazy" id="img-p1" class="project-img"
+                                src="assets/projects/project-portfolio-1.png" alt=""></a>
                     </div>
 
                     <div
@@ -128,7 +129,8 @@
                 <div id="con-p2" class="row justify-content-center flex-row-reverse gap-lg-4 p-lg-5 text-sm-start">
                     <div id="imgSlide02" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide "><a
                             class="link-p2" href="https://arbab57.github.io/onlineCourses/" target="_blank"><img
-                                id="img-p2" class="project-img" src="assets/projects/project- courses.png" alt=""></a>
+                                loading="lazy" id="img-p2" class="project-img"
+                                src="assets/projects/project- courses.png" alt=""></a>
                     </div>
 
                     <div
@@ -155,7 +157,7 @@
 
                     <div id="imgSlide03" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide01"><a
                             class="link-p3" href="https://arbab57.github.io/architecturesite/index.html"
-                            target="_blank"><img id="img-p3" class="project-img"
+                            target="_blank"><img loading="lazy" id="img-p3" class="project-img"
                                 src="assets/projects/project-architecture.png" alt=""></a>
                     </div>
 
@@ -185,8 +187,9 @@
 
                 <div id="con-p4" class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
                     <div id="imgSlide04" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide04"><a
-                            class="link-p4" href="https://arbab57.github.io/bookstore/" target="_blank"><img id="img-p4"
-                                class="project-img" src="assets/projects/project-ourtracks.png" alt=""></a>
+                            class="link-p4" href="https://arbab57.github.io/bookstore/" target="_blank"><img
+                                loading="lazy" id="img-p4" class="project-img"
+                                src="assets/projects/project-ourtracks.png" alt=""></a>
                     </div>
 
                     <div
@@ -215,8 +218,8 @@
                 <div id="con-p5" class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
                     <div id="imgSlide05" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide05"><a
-                            class="link-p5" href="https://arbab57.github.io/travel/" target="_blank"><img id="img-p5"
-                                class="project-img" src="assets/projects/697-890.png" alt=""></a></div>
+                            class="link-p5" href="https://arbab57.github.io/travel/" target="_blank"><img loading="lazy"
+                                id="img-p5" class="project-img" src="assets/projects/697-890.png" alt=""></a></div>
 
                     <div
                         class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
@@ -240,7 +243,8 @@
                 <div id="con-p6" class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
                     <div id="imgSlide06" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide06"><a
                             class="link-p6" href="https://arbab57.github.io/portfolio2/" target="_blank"><img
-                                id="img-p6" class="project-img" src="assets/projects/portfolio-practice.png" alt=""></a>
+                                loading="lazy" id="img-p6" class="project-img"
+                                src="assets/projects/portfolio-practice.png" alt=""></a>
                     </div>
 
                     <div
